--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 
     <header>
         <h1 class="title">Festejando a conexão campo-cidade</h1>
-        <button onclick="toggleDarkMode()">🌙 Alternar Modo Escuro</button>
     </header>
-
-    <!-- Espaço de Login -->
-    <section class="login">
-        <h2>Área do Usuário</h2>
-        <input type="text" id="username" placeholder="Digite seu nome">
-        <button onclick="saveProfile()">Salvar Perfil</button>
-    </section>
 
     <!-- Carrossel de Receitas -->
     <section class="carousel">
@@ -85,11 +77,11 @@
         <button>🎮 Explorar</button>
     </section>
 
-    <!-- Blog -->
-    <section class="blog">
-        <h2>Blog & Notícias</h2>
-        <p>Explore artigos sobre receitas, cultivo urbano e cultura rural.</p>
-        <button onclick="shareContent()">📢 Compartilhar</button>
+    <!-- Galeria de Fotos e Vídeos -->
+    <section class="gallery">
+        <h2>Galeria de Fotos & Vídeos</h2>
+        <p>Veja momentos incríveis que conectam campo e cidade.</p>
+        <button>📷 Ver Galeria</button>
     </section>
 
     <!-- Agenda Viva -->
