--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/OUTRO_VIDEO" frameborder="0" allowfullscreen></iframe>
         </div>
 
-        <button>📷 Ver Galeria Completa</button>
+        <button onclick="window.open('galeria.html', '_blank')">📷 Ver Galeria Completa</button>
     </section>
 
     <!-- Agenda Viva -->
