--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <!-- Histórias Conectadas -->
     <section class="stories">
         <h2>Histórias Conectadas</h2>
-        <p>Depoimentos de quem vive a conexão entre campo e cidade.</p>
+        <p>Depoimentos de quem vive a conexão entre campo e cidade:
+        Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás. 
+        O interior não é mais um lugar em que as pessoas não têm acesso a nada e passam dificuldades. 
+        Pelo contrário. Estou feliz e, também financeiramente, melhor que na cidade</p>
     </section>
 
     <!-- Mapa Interativo -->
