--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
     <section class="stories">
         <h2>Histórias Conectadas</h2>
         <p>Depoimentos de quem vive a conexão entre campo e cidade:
-        Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás. 
+        "Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás. 
         O interior não é mais um lugar em que as pessoas não têm acesso a nada e passam dificuldades. 
-        Pelo contrário. Estou feliz e, também financeiramente, melhor que na cidade</p>
+        Pelo contrário. Estou feliz e, também financeiramente, melhor que na cidade."
+        
+        "Não queria passar a vida inteira fazendo a mesma coisa. 
+        E também tinha essa vontade de produzir meu próprio alimento, de viver mais em contato com a natureza",
+        conta o empresário que virou agricultor orgânico." </p>
     </section>
 
     <!-- Mapa Interativo -->
