--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <section class="stories">
         <h2>Histórias Conectadas</h2>
         <p>Depoimentos de quem vive a conexão entre campo e cidade: </p>
-        "Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás. 
+        <p>"Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás. 
         O interior não é mais um lugar em que as pessoas não têm acesso a nada e passam dificuldades. 
-        Pelo contrário. Estou feliz e, também financeiramente, melhor que na cidade." </p>
+        Pelo contrário. Estou feliz e, também financeiramente, melhor que na cidade."</p>
         
-        "Não queria passar a vida inteira fazendo a mesma coisa. 
+        <p>"Não queria passar a vida inteira fazendo a mesma coisa. 
         E também tinha essa vontade de produzir meu próprio alimento, de viver mais em contato com a natureza",
-        conta o empresário que virou agricultor orgânico." </p>
+        conta o empresário que virou agricultor orgânico."</p>
     </section>
 
     <!-- Mapa Interativo -->
@@ -64,8 +64,8 @@
         </audio>
         
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_VIDEO_AQUI" frameborder="0" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OUTRO_VIDEO" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_VIDEO_AQUI" title="Entrevista sobre a conexão campo-cidade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OUTRO_VIDEO" title="Histórias de produtores rurais" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -144,5 +144,6 @@
 
 </body>
 </html>
+
 
 
