--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </audio>
         
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_VIDEO_AQUI" title="Entrevista sobre a conexão campo-cidade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OUTRO_VIDEO" title="Histórias de produtores rurais" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/v6e-zVW78zY?si=4vOgB2XdALYreTHx title="Entrevista sobre a conexão campo-cidade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/Yj5ql5t_rXQ?si=4Iws9pQfS7Eozr-s title="Histórias de produtores rurais" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
