--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </audio>
         
         <div class="video-container">
-            <iframe width="560" height="315" src="https://youtu.be/v6e-zVW78zY?si=4vOgB2XdALYreTHx title="Entrevista sobre a conexão campo-cidade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://youtu.be/Yj5ql5t_rXQ?si=4Iws9pQfS7Eozr-s title="Histórias de produtores rurais" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href="https://youtu.be/EVkdn9viUO8?si=0V8MXDMIMkA-ZLjZ" class="cta-button" target="_blank">Impactos do campo a cidade<i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a> Entrevista sobre a conexão campo-cidade" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href="https://youtu.be/pzR6-ZEqY9g?si=uFE2FcffNY0JFmRq" class="cta-button" target="_blank">História de produtores rurais <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </div>
     </section>
 
