--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Carrossel de Receitas -->
     <section class="carousel">
         <div class="carousel-container">
-            <div class="slide"><img src="img1.jpg" alt="Receita rural"></div>
+            <div class="slide"><img src="images (1).jpeg" alt="Receita rural"></div>
             <div class="slide"><img src="img2.jpg" alt="Ingrediente urbano"></div>
             <div class="slide"><img src="img3.jpg" alt="Prato tradicional"></div>
         </div>
