--- a/index.html
+++ b/index.html
@@ -48,6 +48,147 @@
         <h1 class="title">Festejando a conexão campo-cidade</h1>
     </header>
 
+    <!-- Histórias Conectadas -->
+    <section class="stories">
+        <h2>Histórias Conectadas</h2>
+        <p>Depoimentos de quem vive a conexão entre campo e cidade: </p>
+        <p>"Viver no campo não significa trabalhar com a enxada, como era 30 anos atrás..."</p>
+    </section>
+
+    <!-- Seção de Receitas -->
+    <section class="receitas">
+        <h2>Receitas do Campo</h2>
+        <div class="receita">
+            <img src="bolo-milho.jpg" alt="Bolo de milho">
+            <p>Um delicioso bolo de milho cremoso, feito com ingredientes naturais.</p>
+        </div>
+
+        <div class="receita">
+            <img src="pao-caseiro.jpg" alt="Pão caseiro">
+            <p>Pão artesanal assado em forno de barro, com sabor autêntico.</p>
+        </div>
+
+        <div class="receita">
+            <img src="queijo-rural.jpg" alt="Queijo artesanal">
+            <p>Queijo fresco feito com leite direto do produtor rural.</p>
+        </div>
+    </section>
+
+    <!-- Mapa Interativo -->
+    <section class="map">
+        <h2>Mapa da Conexão</h2>
+        <iframe src="https://www.google.com/maps/embed" width="600" height="450"></iframe>
+    </section>
+
+    <!-- Podcast e Vídeos -->
+    <section class="podcast">
+        <h2>Podcast & Entrevistas em Vídeo</h2>
+        <audio controls>
+            <source src="podcast.mp3" type="audio/mpeg">
+            Seu navegador não suporta áudio.
+        </audio>
+        
+        <div class="video-container">
+            <a href="https://youtu.be/EVkdn9viUO8?si=0V8MXDMIMkA-ZLjZ" class="cta-button" target="_blank">Impactos do campo a cidade<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://youtu.be/pzR6-ZEqY9g?si=uFE2FcffNY0JFmRq" class="cta-button" target="_blank">História de produtores rurais <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+    </section>
+
+    <!-- Mercado Local -->
+    <section class="market">
+        <h2>Mercado Local</h2>
+        <p>Compre produtos direto dos produtores rurais.</p>
+        <button>🔎 Explorar Produtos</button>
+    </section>
+
+    <!-- Simulação de Cultivo Urbano -->
+    <section class="cultivo">
+        <h2>Simulação: Cultive na Cidade</h2>
+        <p>Aprenda a plantar ervas e vegetais em espaços pequenos!</p>
+        <button onclick="startSimulation()">🌱 Começar Simulação</button>
+    </section>
+
+    <!-- Calculadora de Pegada Rural -->
+    <section class="calculator">
+        <h2>Calculadora de Pegada Rural</h2>
+        <p>Descubra como suas escolhas impactam a conexão campo-cidade.</p>
+        <button onclick="calculateImpact()">📊 Calcular Agora</button>
+    </section>
+
+    <!-- Espaço Infantil -->
+    <section class="kids">
+        <h2>Espaço Infantil</h2>
+        <p>Jogos e histórias para crianças aprenderem sobre o campo!</p>
+        <button>🎮 Explorar</button>
+    </section>
+
+    <!-- Agenda Viva -->
+    <section class="events">
+        <h2>Agenda Viva</h2>
+        <ul>
+            <li>🌾 Feira agrícola - 15 de junho</li>
+            <li>🎭 Festival de cultura rural - 22 de julho</li>
+        </ul>
+    </section>
+
+    <!-- Leitor Dinâmico -->
+    <button onclick="speakText()">🔊 Ouça o conteúdo</button>
+
+    <script>
+        function speakText() {
+            let msg = new SpeechSynthesisUtterance();
+            msg.text = document.body.innerText;
+            msg.lang = "pt-BR";
+            msg.rate = 1.2;<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Festejando a conexão campo-cidade</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Melhorando os botões */
+        button {
+            font-size: 1.5em; /* Aumenta o tamanho do texto */
+            padding: 15px 30px; /* Mais espaço ao redor do texto */
+            border-radius: 10px; /* Bordas arredondadas */
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #ddd; /* Efeito ao passar o mouse */
+        }
+
+        /* Estilizando a seção de receitas */
+        .receitas {
+            text-align: center;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+
+        .receita {
+            display: inline-block;
+            width: 30%;
+            margin: 15px;
+            text-align: center;
+        }
+
+        .receita img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .receita p {
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1 class="title">Festejando a conexão campo-cidade</h1>
+    </header>
+
     <!-- Carrossel de Receitas -->
     <section class="carousel">
         <div class="carousel-container">
@@ -159,3 +300,12 @@
 
 </body>
 </html>
+            msg.pitch = 1.2;
+            msg.volume = 1;
+            window.speechSynthesis.speak(msg);
+        }
+    </script>
+
+</body>
+</html>
+
